# fortuner

./: Cargo.toml  README.md  mk-dat.sh  mk-outs.sh
src/: lib.rs  main.rs
tests/: cli.rs
